summative.moria.Moria.scala.error
Compilation error:
Moria:17: error: Unit does not take parameters
    getOutAlive()
               ^